--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-	"name": "location-services",
-	"version": "0.0.0",
-	"private": "true",
-	"scripts": {
-		"start": "node ./bin/www"
-		},
-	"dependencies": {
-		"express": "~4.9.0",
-		"body-parser": "~1.8.1",
-		"cookie-parser": "~1.3.3",
-		"morgan": "~1.3.0",
-		"server-favicon": "~2.1.3",
-		"debug": "~2.0.0",
-		"jade": "~1.6.0"
-	}
+  "name": "location-services",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "engines":{
+  	"node":"~4.5.0",
+  	"npm":"~3.10.7"
+  }
+  "dependencies": {
+    "body-parser": "~1.8.1",
+    "cookie-parser": "~1.3.3",
+    "debug": "~2.0.0",
+    "express": "~4.9.0",
+    "morgan": "~1.3.0",
+    "nodemon": "^1.11.0",
+    "pug": "^2.0.0-beta11",
+    "serve-favicon": "~2.3.0"
+  }
 }
