--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "engines":{
   	"node":"~4.5.0",
   	"npm":"~3.10.7"
-  }
+  },
   "dependencies": {
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
@@ -18,5 +18,9 @@
     "nodemon": "^1.11.0",
     "pug": "^2.0.0-beta11",
     "serve-favicon": "~2.3.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/swatikiran123/locationSearch"
   }
 }
